// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ToolbarFieldDisplayName Component should handle clearing display name through redux state: clear display name 1`] = `
[
  [
    [
      {
        "type": "SET_QUERY_CLEAR_INVENTORY_LIST",
        "viewId": "loremIpsum",
      },
      {
        "filter": "display_name_contains",
        "type": "SET_QUERY_INVENTORY_INSTANCES",
        "value": null,
        "viewId": "loremIpsum",
      },
    ],
  ],
]
`;

exports[`ToolbarFieldDisplayName Component should handle updating display name through redux state: dispatch display name 1`] = `
[
  [
    [
      {
        "type": "SET_QUERY_CLEAR_INVENTORY_LIST",
        "viewId": "loremIpsum",
      },
      {
        "filter": "display_name_contains",
        "type": "SET_QUERY_INVENTORY_INSTANCES",
        "value": "dolor sit",
        "viewId": "loremIpsum",
      },
    ],
  ],
]
`;

exports[`ToolbarFieldDisplayName Component should handle updating display name using the enter key: enter display name 1`] = `
[
  [
    [
      {
        "type": "SET_QUERY_CLEAR_INVENTORY_LIST",
        "viewId": "loremIpsum",
      },
      {
        "filter": "display_name_contains",
        "type": "SET_QUERY_INVENTORY_INSTANCES",
        "value": "dolor sit",
        "viewId": "loremIpsum",
      },
    ],
  ],
]
`;

exports[`ToolbarFieldDisplayName Component should render a basic component: basic 1`] = `
<InputGroup>
  <InputGroupItem>
    <TextInput
      aria-label="t(curiosity-toolbar.placeholder_filter, {"context":"displayName"})"
      className="curiosity-input__display-name"
      customIcon={<SearchIcon />}
      data-test="toolbarFieldDisplayName"
      maxLength={255}
      onClear={[Function]}
      onKeyUp={[Function]}
      placeholder="t(curiosity-toolbar.placeholder_filter, {"context":"displayName"})"
      value="lorem ipsum"
    />
  </InputGroupItem>
</InputGroup>
`;
